# tw-mod-organizer

./: .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  eslint.config.js  index.html  package.json  tailwind.config.js  vite.config.ts
src/: app-data.tsx  app-init.tsx  app.tsx  bulk-category.tsx  edit-separator.tsx  game-selector.tsx  init.tsx  main.css  main.tsx  meta-information.tsx  profiler.tsx  remove-mod.tsx  required-items.tsx  set-priority.tsx
src-tauri/: Cargo.toml  tauri.conf.json  third_party_licenses.txt
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: app_version_check.rs  clear_cache.rs  create_app_default_paths.rs  delete_mod.rs  delete_save_file.rs  download_manager.rs  export_profile.rs  get_pack_conflicts.rs  get_pack_files.rs  get_save_files.rs  get_zip_contents.rs  highlight_file.rs  highlight_path.rs  import_data.rs  install_mod.rs  is_game_running.rs  lib.rs  local_mods.rs  main.rs  migrate_local_mod.rs  migrations.rs  nexus_auth_init.rs  nexus_download_link.rs  nxm_protocol_toggle.rs  open_external_url.rs  parse_profile_json.rs  protected_paths.rs  start_game.rs  steam_library_paths.rs  steam_paths.rs  subscribed_mods.rs  unsubscribe.rs  version_check.rs
src-tauri/src/download/: manager.rs  mod.rs  pause.rs  remove.rs  start.rs  sync.rs
src-tauri/src/game/: delete_save_file.rs  fetch_save_file_meta.rs  find_installation_path.rs  force_quit.rs  is_running.rs  migrate_legacy_meta_files.rs  mod.rs  save_files.rs  save_folder_watch.rs  set_watch_save_folder.rs  start.rs  supported_games.rs  upsert_save_file_meta.rs
src-tauri/src/game/bannerlord/: start.rs
src-tauri/src/game/totalwar/: start.rs
src-tauri/src/mod/: base_mods.rs  conflicts.rs  delete.rs  install.rs  local_mods.rs  mod.rs  validate_mod_path.rs
src-tauri/src/mod/bannerlord/: base_mods.rs  conflicts.rs  has_mod_file.rs  local_mods.rs  mod.rs
src-tauri/src/mod/totalwar/: conflicts.rs  find_mod_file_and_image.rs  has_mod_file.rs  local_mods.rs  mod.rs
src-tauri/src/nexus/: auth_init.rs  download_link.rs  mod.rs  mod_details.rs
src-tauri/src/pack/: conflicts.rs  find_pack_and_image.rs  has_pack_file.rs  migrate_local_mod.rs  mod.rs  open_pack_file.rs  pack_db_data.rs  pack_db_data_raw.rs  pack_fetch_data.rs  pack_files.rs  pack_loc_data.rs  pack_loc_data_raw.rs
src-tauri/src/sevenz/: find_7zip_path.rs  mod.rs  zip_contents.rs
src-tauri/src/steam/: check_item_download.rs  fetch_creator_names.rs  get_collection_items.rs  get_workshop_items.rs  initialize_client.rs  localplayer.rs  mod.rs  steam_library_paths.rs  steam_paths.rs  subscribe.rs  subscribed_mods.rs  unsubscribe.rs  update_workshop_item.rs  workshop.rs  workshop_item.rs  workshop_path_for_app.rs
src-tauri/src/steamworks/: client.rs  localplayer.rs  mod.rs  workshop_item.rs
src-tauri/src/utils/: convert_dds.rs  convert_dds_to_png.rs  create_app_default_paths.rs  create_junction.rs  get_drive_letter.rs  highlight_path.rs  json_wrapper.rs  mod.rs  open_external_url.rs  roaming_folder.rs  supported_games.rs
src-tauri/src/xml/: mod.rs  submodule_contents.rs
src/components/: SyntaxHighlighter.tsx  accordion.tsx  alert-dialog.tsx  button.tsx  checkbox.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  (+17 more)
(+129 files in other folders)
