[package]
name = "tw-mod-organizer"
version = "0.2.0"
description = "TW Mod Organizer"
authors = ["Burak Kartal"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tw_mod_organizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.43.0", features = ["full"] }
lazy_static = "1.5.0"
rpfm_lib = "4.3.14"
rayon = "1.10.0"
winreg = "0.55.0"
regex = "1.11.1"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
ulid = "1.2.0"
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
futures-util = "0.3.31"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-rustls"] }
trash = "5.2.2"
reqwest = { version = "0.12.12", features = ["stream", "json"] }
steamworks = { git = "https://github.com/Noxime/steamworks-rs/", rev = "fbb79635b06b4feea8261e5ca3e8ea3ef42facf9", features = ["serde"] }
uuid = "1.15.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
