[package]
name = "tw-mod-organizer"
version = "0.4.2"
description = "TW Mod Organizer"
authors = ["Burak Kartal"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tw_mod_organizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
futures-util = "0.3.31"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-rustls"] }
rayon = "1.10.0"
winreg = "0.55.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["stream", "json"] }
uuid = "1.15.1"
steamworks = { version = "0.11.0", features = ["serde"] }
rpfm_lib = "4.3.14"
trash = "5.2.2"
open = "5.3.2"
notify = "8.0.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
